--- a/Data_Sci_Question_1_Analysis.ipynb
+++ b/Data_Sci_Question_1_Analysis.ipynb
@@ -682,18 +682,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I will now compare the standard deviation of the total_items from the previous data set to this data set"
+    "I will now compare the standard deviation of the total_items from the previous data sets to this data set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 451,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "In the previous data set (data_set) total_items has a standard deviation of: 116.32031980492717 \n",
+      "\n",
+      "\n",
       "In the previous data set (data_set_corrected) total_items has a standard deviation of: 116.85728599309454 \n",
       "\n",
       "\n",
@@ -704,6 +707,7 @@
     }
    ],
    "source": [
+    "print('In the previous data set (data_set) total_items has a standard deviation of:',data_set.std().total_items,'\\n'*2)\n",
     "print('In the previous data set (data_set_corrected) total_items has a standard deviation of:',data_set_corrected.std().total_items,'\\n'*2)\n",
     "print('In the corrected data set (data_set_corrected2) total_items has a standard deviation of:',data_set_corrected2.std().total_items,'\\n'*2)"
    ]
@@ -756,13 +760,21 @@
    "metadata": {},
    "source": [
     "# Supplimental analysis\n",
-    "\n",
+    "1. Analysing the Mean (AOV), Median and Mode using the different data sets.\n",
+    "2. Using the number of orders vs. total quantity ordered.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#1. Analysing the Mean (AOV), Median and Mode\n",
     "Below, is some analysis of the data sets at different levels show how the relationship between data changes as the data is cleaned up, using the mean, median and mode."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 450,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +783,7 @@
      "text": [
       "From the original data set:\n",
       "\n",
-      "The mean of the order amount and total item columns respectively:\n",
+      "The mean (AOV) of the order amount and total item columns respectively:\n",
       "Mean order amount:\n",
       "3145.128\n",
       "\n",
@@ -801,7 +813,7 @@
       "From the inital data correction, excluding only the high priced shoes of 25725\n",
       "\n",
       "\n",
-      "The mean of the order amount and total item columns respectively:\n",
+      "The mean (AOV) of the order amount and total item columns respectively:\n",
       "Mean order amount:\n",
       "2717.3677836092047\n",
       "\n",
@@ -831,7 +843,7 @@
       "From the final data correction, excluding the high unit price of 25725, and high number items orderd, 2000:\n",
       "\n",
       "\n",
-      "The mean of the order amount and total item columns respectively:\n",
+      "The mean (AOV) of the order amount and total item columns respectively:\n",
       "Mean order amount:\n",
       "302.58051448247926\n",
       "\n",
@@ -859,12 +871,12 @@
     }
    ],
    "source": [
-    "mean_data_set = data_set.mean(axis = 0)\n",
+    "mean_data_set = data_set.mean()\n",
     "median_data_set = data_set.median()\n",
     "mode_data_set = data_set.mode()\n",
     "\n",
     "print(\"From the original data set:\\n\")\n",
-    "print(f\"\"\"The mean of the order amount and total item columns respectively:\n",
+    "print(f\"\"\"The mean (AOV) of the order amount and total item columns respectively:\n",
     "Mean order amount:\\n{mean_data_set.order_amount}\n",
     "\\nMean total items ordered:\\n{mean_data_set.total_items}\\n\"\"\")\n",
     "\n",
@@ -878,12 +890,12 @@
     "\n",
     "print('='*30,'\\n'*2)\n",
     "\n",
-    "mean_data_set_corrected = data_set_corrected.mean(axis = 0)\n",
-    "median_data_set_corrected = data_set_corrected.median(axis = 0)\n",
-    "mode_data_set_corrected = data_set_corrected.mode(axis = 0)\n",
+    "mean_data_set_corrected = data_set_corrected.mean()\n",
+    "median_data_set_corrected = data_set_corrected.median()\n",
+    "mode_data_set_corrected = data_set_corrected.mode()\n",
     "\n",
     "print(\"From the inital data correction, excluding only the high priced shoes of 25725\\n\")\n",
-    "print(f\"\"\"\\nThe mean of the order amount and total item columns respectively:\n",
+    "print(f\"\"\"\\nThe mean (AOV) of the order amount and total item columns respectively:\n",
     "Mean order amount:\\n{mean_data_set_corrected.order_amount}\n",
     "\\nMean total items ordered:\\n{mean_data_set_corrected.total_items}\\n\"\"\")\n",
     "\n",
@@ -896,13 +908,13 @@
     "\\nMode total items ordered:\\n{mode_data_set_corrected.total_items[0]}\\n\"\"\")\n",
     "\n",
     "print('='*30,'\\n'*2)\n",
-    "mean_data_set_corrected2 = data_set_corrected2.mean(axis = 0)\n",
-    "median_data_set_corrected2 = data_set_corrected2.median(axis = 0)\n",
+    "mean_data_set_corrected2 = data_set_corrected2.mean()\n",
+    "median_data_set_corrected2 = data_set_corrected2.median()\n",
     "mode_data_set_corrected2 = data_set_corrected2.mode()\n",
     "\n",
     "print(\"From the final data correction, excluding the high unit price of 25725, and high number items orderd, 2000:\\n\")\n",
     "\n",
-    "print(f\"\"\"\\nThe mean of the order amount and total item columns respectively:\n",
+    "print(f\"\"\"\\nThe mean (AOV) of the order amount and total item columns respectively:\n",
     "Mean order amount:\\n{mean_data_set_corrected2.order_amount}\n",
     "\\nMean total items ordered:\\n{mean_data_set_corrected2.total_items}\\n\"\"\")\n",
     "\n",
@@ -926,6 +938,91 @@
     "On the other hand, due to the way Mean is calculated, there is a vast difference in all 3 values\n",
     "\n",
     "For this data set, using the median or mode, without correcting the data will give fairly accurate results, while the mean would not."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#2. Using the number of orders vs. total quantity ordered for the original and final data sets\n",
+    "By definition, the average order value takes into account the number of orders (which in this case is 5000) regardless of the quantity in each order.\n",
+    "This is done in order to give the business an idea of how much each order placed returns.\n",
+    "\n",
+    "Using the total quantity ordered may pose an issue as it may over compensate for relatively high quantities or high unit prices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 447,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AOV total quantity ordered using the original data set\n",
+      " 357.92152221412965\n",
+      "AOV total quantity ordered using from the inital data correction, excluding only the high priced shoes of 25725\n",
+      " 307.01149425287355\n",
+      "AOV total quantity ordered from the final data correction, excluding the high unit price of 25725, and high number items orderd, 2000:\n",
+      " 151.68968318440292\n"
+     ]
+    }
+   ],
+   "source": [
+    "AOV_total_quantity = sum(data_set.order_amount)/sum(data_set.total_items)\n",
+    "print(\"AOV total quantity ordered using the original data set\\n\",AOV_total_quantity)\n",
+    "\n",
+    "AOV_total_quantity_corrected = sum(data_set_corrected.order_amount)/sum(data_set_corrected.total_items)\n",
+    "print(\"AOV total quantity ordered using from the inital data correction, excluding only the high priced shoes of 25725\\n\",AOV_total_quantity_corrected)\n",
+    "\n",
+    "AOV_total_quantity_corrected2 = sum(data_set_corrected2.order_amount)/sum(data_set_corrected2.total_items)\n",
+    "print(\"AOV total quantity ordered from the final data correction, excluding the high unit price of 25725, and high number items orderd, 2000:\\n\",AOV_total_quantity_corrected2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the analysis above, it supports my initial hypothesis, as it shows the AOV of 358 which appears close enough to the AOV of 303 (using the number of orders, after the data correction)\n",
+    "\n",
+    "We know that shop 78 had a unit price of 25725 and user 607 ordered quantities of 2000, 17 times, which are outliers in the data set.\n",
+    "\n",
+    "In  the first corrected data set (excluding the price from shop 78) the AOV is 307, which is also close to the AOV\n",
+    "\n",
+    "In the final data set (excluding shop 78 and user 607) the AOV is 152, which is much less, less than half, of the AOV values calculated for the previous data sets.\n",
+    "\n",
+    "These metrics can be used if the same/similar quantities are ordered with each order placed.\n",
+    "In this case, the standard deviation (calculated below) of the total_items are: 116 for the original data set, 117 for the inital correction (excluding shop 78) and 1 (excluding shop 78 and user 607) for the corrected dataset.\n",
+    "A standard deviation that high (117) makes using the total quantities ordered for the initial data set somewhat erroneous."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 453,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In the previous data set (data_set) total_items has a standard deviation of: 116.32031980492717 \n",
+      "\n",
+      "\n",
+      "In the previous data set (data_set_corrected) total_items has a standard deviation of: 116.85728599309454 \n",
+      "\n",
+      "\n",
+      "In the corrected data set (data_set_corrected2) total_items has a standard deviation of: 0.9828207382187315 \n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('In the previous data set (data_set) total_items has a standard deviation of:',data_set.std().total_items,'\\n'*2)\n",
+    "print('In the previous data set (data_set_corrected) total_items has a standard deviation of:',data_set_corrected.std().total_items,'\\n'*2)\n",
+    "print('In the corrected data set (data_set_corrected2) total_items has a standard deviation of:',data_set_corrected2.std().total_items,'\\n'*2)"
    ]
   }
  ],
